[gd_scene load_steps=3 format=3 uid="uid://d4m6tphglupjv"]

[ext_resource type="Script" path="res://Entities/Player/Flashlight.gd" id="1_j36yl"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_n8mjk"]
height = 6.95663
radius = 1.25821

[node name="Flashlight" type="SpotLight3D"]
light_color = Color(1, 0, 0.917647, 1)
light_energy = 16.0
light_size = 1.0
light_specular = 7.0
light_cull_mask = 4294967293
shadow_enabled = true
shadow_opacity = 0.5
spot_range = 12.6812
spot_angle = 42.2528
script = ExtResource("1_j36yl")

[node name="FlashlightClick" type="AudioStreamPlayer" parent="."]
mix_target = 1

[node name="CooldownTimer" type="Timer" parent="."]
editor_description = "Flashlight Cool Down"
one_shot = true

[node name="DurationTimer" type="Timer" parent="."]
editor_description = "Flashlight Duration"
one_shot = true

[node name="StunArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StunArea"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -3.48117)
shape = SubResource("CylinderShape3D_n8mjk")

[connection signal="timeout" from="CooldownTimer" to="." method="Cooldown_Timeout"]
[connection signal="timeout" from="DurationTimer" to="." method="Duration_Timeout"]
